Bug 170340 - Can not drag multiple elements in treeview (from an extension)
Summary: Can not drag multiple elements in treeview (from an extension)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: sdk (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.1
Keywords:
Depends on:
Blocks:
 
Reported: 2026-01-14 14:38 UTC by Samuel Mehrbrodt
Modified: 2026-01-19 22:59 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Samuel Mehrbrodt 2026-01-14 14:38:25 UTC
1. Download and install the milsymbol extension from here: https://github.com/allotropia/milsym-extension/releases
2. Open Writer/Calc/Draw/Impress and open menu item "Military Symbols->Insert Orbat".
3. In the dialog that appears, select two elements and try to drop them somewhere else.

Expected: All selected elements can be dragged
Actual: Multiselection gets lost when trying to drag an element
Comment 1 Samuel Mehrbrodt 2026-01-14 14:40:03 UTC
Fixed on master with https://git.libreoffice.org/core/commit/2173a79c691f793a6a6f55353d406e6c71c41e09
Comment 2 Commit Notification 2026-01-19 22:59:11 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/c65ce2372c1832d36693eb7b809d3f91c798da02

tdf#170340: Fix drag&drop with multiselection from extensions

It will be available in 26.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.