tdf#170340: Fix drag&drop with multiselection from extensions

When registering drag gesture listeners via an extension,
the selection handling code did not recognize that as "drag mode" being set.
Dragging multiple elements did not work consequently.

Change this and consider registered drag gesture listeners also as
"drag mode" being set.

Change-Id: I37de30ad3c385001f08988d462f6e7dfb3f0183c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197117
Reviewed-by: Stephan Bergmann <stephan.bergmann@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 2173a79c691f793a6a6f55353d406e6c71c41e09)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197219
Reviewed-by: Thorsten Behrens <thorsten.behrens@collabora.com>